--- a/who_gets_killed.ipynb
+++ b/who_gets_killed.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 254,
    "metadata": {
     "collapsed": false
    },
@@ -97,7 +97,10 @@
     "age_columns = ['under_1','1_to_4','5_to_8','9_to_12','13_to_16','17_to_19','20_to_24',\n",
     "               '25_to_29','30_to_34','35_to_39','40_to_44','45_to_49','50_to_54','55_to_59',\n",
     "               '60_to_64','65_to_69','70_to_74','75_and_over','unknown_age']\n",
-    "age = counts[age_columns]"
+    "age = counts[age_columns]\n",
+    "\n",
+    "# uncomment to export counts as csv\n",
+    "# counts.to_csv('./cius_data/murder_victim_count_race_sex_age_2003_2013.csv')"
    ]
   },
   {
