Include generated txt files for the data files

--- a/murder_victims_age_sex_race_by_year.ipynb
+++ b/murder_victims_age_sex_race_by_year.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Murder victims (table 2)\n",
+    "# Murder victims: age, sex, race\n",
     "\n",
-    "Combines Table 2 from the Supplemental Homicide Report (SHR) from 2000-2013 into a few different CSV files\n",
+    "Combines tables from the Supplemental Homicide Report (SHR) from 2003-2013 into a few different CSV files for easier analysis.\n",
     "\n",
     "## Notes\n",
     "\n",
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 456,
    "metadata": {
     "collapsed": false
    },
@@ -23,7 +23,7 @@
    "source": [
     "%matplotlib inline\n",
     "from collections import OrderedDict\n",
-    "import glob\n",
+    "import textwrap\n",
     "import pandas as pd"
    ]
   },
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 446,
+   "execution_count": 457,
    "metadata": {
     "collapsed": false
    },
@@ -89,13 +89,22 @@
     "us_population.loc[21, 'Year'] = 2012\n",
     "us_population['Year'] = us_population['Year'].apply(str)\n",
     "us_population.set_index('Year', inplace=True)\n",
-    "us_population.to_csv('cius_data/processed/us_population.csv')\n",
-    "us_population = us_population.loc[YEARS, :]"
+    "us_population.to_csv('cius_data/processed/us-population-1994-2013.csv')\n",
+    "us_population = us_population.loc[YEARS, :]\n",
+    "\n",
+    "txt = textwrap.dedent(\"\"\"\\\n",
+    "# Population of the US\n",
+    "\n",
+    "Generated from the Table_1_Crime_in_the_United_States_by_Volume_and_Rate_per_100000_Inhabitants_1994-2013.xls file in the 2013 Crime in the US report data table download\n",
+    "\"\"\")\n",
+    "\n",
+    "with open('cius_data/processed/us-population-1994-2013.txt', 'w') as f:\n",
+    "    f.write(txt)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 447,
+   "execution_count": 453,
    "metadata": {
     "collapsed": false
    },
@@ -200,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 448,
+   "execution_count": 454,
    "metadata": {
     "collapsed": false
    },
@@ -221,7 +230,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 449,
+   "execution_count": 463,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "files = []\n",
+    "for year in YEARS:\n",
+    "    table_1_file = TABLE_1_FILE_MAPPING[year].split('/')[-1]\n",
+    "    table_2_file = TABLE_2_FILE_MAPPING[year].split('/')[-1]\n",
+    "    files.append('%s: %s, %s' % (year, table_1_file, TABLE_2_FILE_MAPPING[year]))\n",
+    "               \n",
+    "txt = textwrap.dedent(\"\"\"\\\n",
+    "# Age, sex, and race for murder victims from %s to %s\n",
+    "\n",
+    "Generated from the following tables in the corresponding year's Crime in the US data table download:\n",
+    "%s\"\"\" % (YEARS[0], YEARS[-1], '\\n* '.join(files)))\n",
+    "\n",
+    "with open('cius_data/processed/table-1-and-2-murder-victims-asr/murder-victims-age-sex-race.txt', 'w') as f:\n",
+    "    f.write(txt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 455,
    "metadata": {
     "collapsed": false
    },
@@ -236,15 +269,6 @@
     "other_race.to_csv(dest_path % 'other-race-victims-by-age-2003-2013')\n",
     "unknown_race.to_csv(dest_path % 'unknown-race-victims-by-age-2003-2013')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
