Extra reference tables included

--- a/murder_victims_age_sex_race_by_year.ipynb
+++ b/murder_victims_age_sex_race_by_year.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 456,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -24,12 +24,13 @@
     "%matplotlib inline\n",
     "from collections import OrderedDict\n",
     "import textwrap\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import seaborn as sns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 440,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -74,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 457,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -104,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 453,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -195,21 +196,21 @@
     "    return by_age.join(by_race)\n",
     "\n",
     "def white_victims_by_year(year):\n",
-    "    return victims_by_year(year, ['Expanded Homicide Data Table 2', 'Unnamed: 5'])\n",
+    "    return victims_by_age_by_year(year, ['Expanded Homicide Data Table 2', 'Unnamed: 5'])\n",
     "\n",
     "def black_victims_by_year(year):\n",
-    "    return victims_by_year(year, ['Expanded Homicide Data Table 2', 'Unnamed: 6'])\n",
+    "    return victims_by_age_by_year(year, ['Expanded Homicide Data Table 2', 'Unnamed: 6'])\n",
     "\n",
     "def other_race_victims_by_year(year):\n",
-    "    return victims_by_year(year, ['Expanded Homicide Data Table 2', 'Unnamed: 7'])\n",
+    "    return victims_by_age_by_year(year, ['Expanded Homicide Data Table 2', 'Unnamed: 7'])\n",
     "\n",
     "def unknown_race_victims_by_year(year):\n",
-    "    return victims_by_year(year, ['Expanded Homicide Data Table 2', 'Unnamed: 8'])"
+    "    return victims_by_age_by_year(year, ['Expanded Homicide Data Table 2', 'Unnamed: 8'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 454,
+   "execution_count": 71,
    "metadata": {
     "collapsed": false
    },
@@ -219,7 +220,7 @@
     "    data = pd.concat(map(fn, YEARS))\n",
     "    return us_population.join(data)\n",
     "\n",
-    "males = process(male_victims_by_year)\n",
+    "male = process(male_victims_by_year)\n",
     "female = process(female_victims_by_year)\n",
     "unknown_sex = process(unknown_sex_victims_by_year)\n",
     "white = process(white_victims_by_year)\n",
@@ -230,7 +231,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 463,
+   "execution_count": 72,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "by_sex = pd.concat([us_population, male['Total'], female['Total'], unknown_sex['Total']], axis=1)\n",
+    "by_sex.columns = ['US Population', 'Total male', 'Total female', 'Total unknown sex']\n",
+    "by_sex['Total'] = by_sex['Total male'] + by_sex['Total female'] + by_sex['Total unknown sex']\n",
+    "\n",
+    "by_race = pd.concat([us_population, white['Total'], black['Total'], other_race['Total'], unknown_race['Total']], axis=1)\n",
+    "by_race.columns = ['US Population', 'Total white', 'Total black', 'Total other race', 'Total unknown race']\n",
+    "by_race['Total'] = by_race['Total white'] + by_race['Total black'] + by_race['Total other race'] + by_race['Total unknown race']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
    "metadata": {
     "collapsed": false
    },
@@ -240,13 +258,13 @@
     "for year in YEARS:\n",
     "    table_1_file = TABLE_1_FILE_MAPPING[year].split('/')[-1]\n",
     "    table_2_file = TABLE_2_FILE_MAPPING[year].split('/')[-1]\n",
-    "    files.append('%s: %s, %s' % (year, table_1_file, TABLE_2_FILE_MAPPING[year]))\n",
+    "    files.append('%s: %s, %s' % (year, table_1_file, table_2_file))\n",
     "               \n",
     "txt = textwrap.dedent(\"\"\"\\\n",
     "# Age, sex, and race for murder victims from %s to %s\n",
     "\n",
     "Generated from the following tables in the corresponding year's Crime in the US data table download:\n",
-    "%s\"\"\" % (YEARS[0], YEARS[-1], '\\n* '.join(files)))\n",
+    "%s\"\"\" % (YEARS[0], YEARS[-1], '\\n'.join(files)))\n",
     "\n",
     "with open('cius_data/processed/table-1-and-2-murder-victims-asr/murder-victims-age-sex-race.txt', 'w') as f:\n",
     "    f.write(txt)"
@@ -254,20 +272,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 455,
+   "execution_count": 74,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "dest_path = 'cius_data/processed/table-1-and-2-murder-victims-asr/%s.csv'\n",
-    "males.to_csv(dest_path % 'male-victims-by-age-2003-2013')\n",
-    "female.to_csv(dest_path % 'female-victims-by-age-2003-2013')\n",
-    "unknown_sex.to_csv(dest_path % 'unknown-sex-victims-by-age-2003-2013')\n",
+    "male.to_csv(dest_path % 'male-victims-by-age-and-race-2003-2013')\n",
+    "female.to_csv(dest_path % 'female-victims-by-age-and-race-2003-2013')\n",
+    "unknown_sex.to_csv(dest_path % 'unknown-sex-victims-by-age-and-race-2003-2013')\n",
     "white.to_csv(dest_path % 'white-victims-by-age-2003-2013')\n",
     "black.to_csv(dest_path % 'black-victims-by-age-2003-2013')\n",
     "other_race.to_csv(dest_path % 'other-race-victims-by-age-2003-2013')\n",
-    "unknown_race.to_csv(dest_path % 'unknown-race-victims-by-age-2003-2013')"
+    "unknown_race.to_csv(dest_path % 'unknown-race-victims-by-age-2003-2013')\n",
+    "by_sex.to_csv(dest_path % 'victims-by-sex-2003-2013')\n",
+    "by_race.to_csv(dest_path % 'victims-by-race-2003-2013')"
    ]
   }
  ],
