--- a/murder_victims_age_sex_race_by_year.ipynb
+++ b/murder_victims_age_sex_race_by_year.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 75,
    "metadata": {
     "collapsed": false
    },
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 76,
    "metadata": {
     "collapsed": false
    },
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 77,
    "metadata": {
     "collapsed": false
    },
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 78,
    "metadata": {
     "collapsed": false
    },
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 79,
    "metadata": {
     "collapsed": false
    },
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 80,
    "metadata": {
     "collapsed": true
    },
@@ -248,12 +248,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 81,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
+    "footnotes = [\n",
+    "    'Age bins such as under 18, under 22, and 18 and over do not include unknown ages'\n",
+    "]\n",
     "files = []\n",
     "for year in YEARS:\n",
     "    table_1_file = TABLE_1_FILE_MAPPING[year].split('/')[-1]\n",
@@ -264,7 +267,11 @@
     "# Age, sex, and race for murder victims from %s to %s\n",
     "\n",
     "Generated from the following tables in the corresponding year's Crime in the US data table download:\n",
-    "%s\"\"\" % (YEARS[0], YEARS[-1], '\\n'.join(files)))\n",
+    "%s\n",
+    "\n",
+    "Footnotes/caveats:\n",
+    "%s\n",
+    "\"\"\" % (YEARS[0], YEARS[-1], '\\n'.join(files), '\\n'.join(footnotes)))\n",
     "\n",
     "with open('cius_data/processed/table-1-and-2-murder-victims-asr/murder-victims-age-sex-race.txt', 'w') as f:\n",
     "    f.write(txt)"
@@ -272,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 82,
    "metadata": {
     "collapsed": false
    },
