Include SHR identification

--- a/murder_victims_age_sex_race_by_year.ipynb
+++ b/murder_victims_age_sex_race_by_year.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 94,
    "metadata": {
     "collapsed": false
    },
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 95,
    "metadata": {
     "collapsed": false
    },
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 96,
    "metadata": {
     "collapsed": false
    },
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 97,
    "metadata": {
     "collapsed": false
    },
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 98,
    "metadata": {
     "collapsed": false
    },
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 99,
    "metadata": {
     "collapsed": true
    },
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 100,
    "metadata": {
     "collapsed": false
    },
@@ -266,26 +266,26 @@
     "txt = textwrap.dedent(\"\"\"\\\n",
     "# Age, sex, and race for murder victims from %s to %s\n",
     "\n",
-    "Generated from the following tables in the corresponding year's Crime in the US data table download:\n",
+    "Generated from the following tables in the Supplmental Homicide Report (SHR) of the corresponding year's Crime in the US data table download:\n",
     "%s\n",
     "\n",
     "Footnotes/caveats:\n",
     "%s\n",
     "\"\"\" % (YEARS[0], YEARS[-1], '\\n'.join(files), '\\n'.join(footnotes)))\n",
     "\n",
-    "with open('cius_data/processed/table-1-and-2-murder-victims-asr/murder-victims-age-sex-race.txt', 'w') as f:\n",
+    "with open('cius_data/processed/shr-table-1-and-2-murder-victims-asr/murder-victims-age-sex-race.txt', 'w') as f:\n",
     "    f.write(txt)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 101,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "dest_path = 'cius_data/processed/table-1-and-2-murder-victims-asr/%s.csv'\n",
+    "dest_path = 'cius_data/processed/shr-table-1-and-2-murder-victims-asr/%s.csv'\n",
     "male.to_csv(dest_path % 'male-victims-by-age-and-race-2003-2013')\n",
     "female.to_csv(dest_path % 'female-victims-by-age-and-race-2003-2013')\n",
     "unknown_sex.to_csv(dest_path % 'unknown-sex-victims-by-age-and-race-2003-2013')\n",
@@ -296,6 +296,15 @@
     "by_sex.to_csv(dest_path % 'victims-by-sex-2003-2013')\n",
     "by_race.to_csv(dest_path % 'victims-by-race-2003-2013')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
