--- a/murder_offenders_age_sex_race_by_year.ipynb
+++ b/murder_offenders_age_sex_race_by_year.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 107,
    "metadata": {
     "collapsed": false
    },
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 108,
    "metadata": {
     "collapsed": false
    },
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 109,
    "metadata": {
     "collapsed": false
    },
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 110,
    "metadata": {
     "collapsed": false
    },
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 111,
    "metadata": {
     "collapsed": false
    },
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 112,
    "metadata": {
     "collapsed": true
    },
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 113,
    "metadata": {
     "collapsed": false
    },
@@ -210,26 +210,26 @@
     "txt = textwrap.dedent(\"\"\"\\\n",
     "# Age, sex, and race for murder offenders from %s to %s\n",
     "\n",
-    "Generated from the following tables in the corresponding year's Crime in the US data table download:\n",
+    "Generated from the following tables in the Supplemental Homicide Report (SHR) from the corresponding year's Crime in the US data table download:\n",
     "%s\n",
     "\n",
     "Footnotes/caveats:\n",
     "%s\n",
     "\"\"\" % (YEARS[0], YEARS[-1], '\\n'.join(files), '\\n'.join(footnotes)))\n",
     "\n",
-    "with open('cius_data/processed/table-3-murder-offenders-asr/murder-offenders-age-sex-race.txt', 'w') as f:\n",
+    "with open('cius_data/processed/shr-table-3-murder-offenders-asr/murder-offenders-age-sex-race.txt', 'w') as f:\n",
     "    f.write(txt)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 114,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "dest_path = 'cius_data/processed/table-3-murder-offenders-asr/%s.csv'\n",
+    "dest_path = 'cius_data/processed/shr-table-3-murder-offenders-asr/%s.csv'\n",
     "male.to_csv(dest_path % 'male-offenders-by-age-and-race-2003-2013')\n",
     "female.to_csv(dest_path % 'female-offenders-by-age-and-race-2003-2013')\n",
     "unknown_sex.to_csv(dest_path % 'unknown-sex-offenders-by-age-and-race-2003-2013')\n",
