Generate some documentation for tables

--- a/police_employee_counts_by_state.ipynb
+++ b/police_employee_counts_by_state.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 190,
    "metadata": {
     "collapsed": true
    },
@@ -10,12 +10,13 @@
    "source": [
     "%matplotlib inline\n",
     "import glob\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import textwrap"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 191,
    "metadata": {
     "collapsed": true
    },
@@ -26,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 192,
    "metadata": {
     "collapsed": false
    },
@@ -67,156 +68,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 193,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def file_for_year(year):\n",
+    "    file = FILE_MAPPING[year].split('/')[-1]\n",
+    "    return '%s: %s' % (year, file)\n",
+    "\n",
+    "files = [file_for_year(y) for y in YEARS]\n",
+    "\n",
+    "def write_notes(filepath, body, footnotes):\n",
+    "    txt = textwrap.dedent(\"\"\"\\\n",
+    "# %s from %s to %s\n",
+    "\n",
+    "Generated from the following tables of the corresponding year's Crime in the US data table download:\n",
+    "%s\n",
+    "\n",
+    "Footnotes/caveats:\n",
+    "%s\n",
+    "\"\"\" % (body, YEARS[0], YEARS[-1], '\\n'.join(files), '\\n'.join(footnotes)))\n",
+    "    with open(filepath, 'w') as f:\n",
+    "        f.write(txt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "dest_path = 'cius_data/processed/table-77-fte-law-enforcement/%s.csv'\n",
-    "years.to_csv(dest_path % 'police-employee-counts-by-state-2005-2013')"
+    "txt_path = dest_path.replace('.csv', '.txt')\n",
+    "years_file = 'police-employee-counts-by-state-%s-%s' % (YEARS[0], YEARS[-1])\n",
+    "years.to_csv(dest_path % years_file)\n",
+    "\n",
+    "national_cols = ['Population', 'Total law enforcement employees', 'Total male officers', 'Total female officers', 'Total male civilians', 'Total female civilians']\n",
+    "national = years.reset_index()\n",
+    "national = national.groupby('Year')[national_cols].sum()\n",
+    "national_file = 'police-employee-counts-nationally-%s-%s' % (YEARS[0], YEARS[-1])\n",
+    "national.to_csv(dest_path % national_file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 195,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "ny = years[years['State'] == 'NEW YORK']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 131,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>State</th>\n",
-       "      <th>Population</th>\n",
-       "      <th>Number of agencies</th>\n",
-       "      <th>Total law enforcement employees</th>\n",
-       "      <th>Total male officers</th>\n",
-       "      <th>Total female officers</th>\n",
-       "      <th>Total male civilians</th>\n",
-       "      <th>Total female civilians</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Year</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2005</th>\n",
-       "      <td>NEW YORK</td>\n",
-       "      <td>17905562</td>\n",
-       "      <td>409</td>\n",
-       "      <td>83625</td>\n",
-       "      <td>52544</td>\n",
-       "      <td>8351</td>\n",
-       "      <td>7380</td>\n",
-       "      <td>15350</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2006</th>\n",
-       "      <td>NEW YORK</td>\n",
-       "      <td>18719867</td>\n",
-       "      <td>402</td>\n",
-       "      <td>86053</td>\n",
-       "      <td>53597</td>\n",
-       "      <td>8579</td>\n",
-       "      <td>7820</td>\n",
-       "      <td>16057</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2007</th>\n",
-       "      <td>NEW YORK</td>\n",
-       "      <td>18883746</td>\n",
-       "      <td>427</td>\n",
-       "      <td>86952</td>\n",
-       "      <td>53742</td>\n",
-       "      <td>8579</td>\n",
-       "      <td>8019</td>\n",
-       "      <td>16612</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2008</th>\n",
-       "      <td>NEW YORK</td>\n",
-       "      <td>18103583</td>\n",
-       "      <td>342</td>\n",
-       "      <td>80949</td>\n",
-       "      <td>52722</td>\n",
-       "      <td>8607</td>\n",
-       "      <td>5780</td>\n",
-       "      <td>13840</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2009</th>\n",
-       "      <td>NEW YORK</td>\n",
-       "      <td>19120958</td>\n",
-       "      <td>436</td>\n",
-       "      <td>83941</td>\n",
-       "      <td>53588</td>\n",
-       "      <td>8572</td>\n",
-       "      <td>7711</td>\n",
-       "      <td>14070</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         State Population Number of agencies Total law enforcement employees  \\\n",
-       "Year                                                                           \n",
-       "2005  NEW YORK   17905562                409                           83625   \n",
-       "2006  NEW YORK   18719867                402                           86053   \n",
-       "2007  NEW YORK   18883746                427                           86952   \n",
-       "2008  NEW YORK   18103583                342                           80949   \n",
-       "2009  NEW YORK   19120958                436                           83941   \n",
-       "\n",
-       "     Total male officers Total female officers Total male civilians  \\\n",
-       "Year                                                                  \n",
-       "2005               52544                  8351                 7380   \n",
-       "2006               53597                  8579                 7820   \n",
-       "2007               53742                  8579                 8019   \n",
-       "2008               52722                  8607                 5780   \n",
-       "2009               53588                  8572                 7711   \n",
-       "\n",
-       "     Total female civilians  \n",
-       "Year                         \n",
-       "2005                  15350  \n",
-       "2006                  16057  \n",
-       "2007                  16612  \n",
-       "2008                  13840  \n",
-       "2009                  14070  "
-      ]
-     },
-     "execution_count": 131,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ny"
+    "years_body = 'Yearly totals for law enforcement employee counts by state'\n",
+    "years_footnotes = ['Some states are missing some years. For example, West Virginia did not submit 2008 totals']\n",
+    "write_notes(txt_path % years_file, years_body, years_footnotes)\n",
+    "\n",
+    "national_body = 'Yearly totals for law enforcement employee counts nationally'\n",
+    "national_footnotes = ['Population count generated by summing reported state population totals, not from national population estimates']\n",
+    "write_notes(txt_path % national_file, national_body, national_footnotes)"
    ]
   },
   {
